# TODO-app

./: .gitignore  CODEOWNERS  README.md  config.py  docker-compose.dev.yml  insert.sql  pyproject.toml
api/: db.py  main.py  migrate_db.py
api/cruds/: assignTodo.py  assignee.py  searchTodoByAssignee.py  todo.py
api/models/: assignee.py  model.py
api/schemas/: assignTodo.py  assignee.py  todo.py
routers/: assign-todo.py  assignTodo.py  assignee.py  searchTodoByAssignee.py  todo.py
